# aopy-connect

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml  requirements-dev.txt  setup.py
aopy_connect/: __init__.py  ao_connect_wrapper.py
examples/: basic_usage.py
node_scripts/: ao_connect.js
scripts/: post_install.py
tests/: test_real_ao.py
