[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"



[project]
name = "aopy_connect"
version = "1.0.0"
description = "AO Connect Python Wrapper - Backend for AO Connect integration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Aditya Berry", email = "adityaberry1234@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.7"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/imortaltatsu/aopy-connect"
Repository = "https://github.com/imortaltatsu/aopy-connect"
Issues = "https://github.com/imortaltatsu/aopy-connect/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aopy_connect*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 